--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
+html *{
+  font-size: 1em !important;
+     color: #e9d8d8 !important;
+     font-family: Arial !important;
+     font-weight: bold;
+     text-shadow:0px 0px 10px 0px #45B8AC !important;
+  }
+
 body {
   background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
