Add background image

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,5 +7,9 @@ html *{
   }
 
 body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  background-image: url('/dist/images/AdobeStock_571093886.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center center;
 }
