--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,8 @@
 html *{
   font-size: 1em !important;
      color: #ff8c28 !important;
-     font-family: Arial !important;
-     font-weight: bold;
+     font-family: Monaco !important;
+     font-weight: normal;
      text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000,-1px 2px 0 #000000, 1px 2px 0 #000000;
   }
 
@@ -28,7 +28,7 @@ body {
 }
 #tripArea {
   margin: 20px 10px;
-  padding: 32px 32px;
+  Tpadding: 32px 32px;
   
 }
 #totalsArea {
