Feat calculate total spent and agent fees

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,11 +16,10 @@ body {
 }
 
 #left{
-  margin: 10px 10px;
-  background-image: url('/dist/images/AdobeStock_tall.png');
+  margin: 10px 15px;
+  background-image: url('/dist/images/AdobeStock_wide.png');
   background-repeat: no-repeat;
   background-size: fill;
-  /* background-position: center center; */
   width: auto;
   height: 1000px;
   
@@ -34,4 +33,9 @@ body {
 #totalsArea {
   margin: 75px 10px;
   
+}
+
+#date-table {
+  padding: 0px;
+  margin: 15px;
 }
