--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -37,3 +37,12 @@ body {
   padding: 0px;
   margin: 15px;
 }
+
+#trip-request {
+  float: right;
+  width: 40%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-left: 20px;
+}
