--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,10 +19,10 @@ body {
   margin: 10px 15px;
   background-image: url('/dist/images/AdobeStock_wide.png');
   background-repeat: no-repeat;
-  background-size: fill;
-  width: auto;
-  height: 2000px;
-  min-height: 100%;
+  background-size: contain;
+  width: 40%;
+  height: 1200px;
+ 
 }
 #tripArea {
   margin: 20px 10px;
@@ -39,7 +39,7 @@ body {
 }
 
 #trip-request {
-  float: right;
+ 
   width: 40%;
   padding: 20px;
   border: 1px solid #ccc;
