--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -135,5 +135,16 @@ h3{
 
 }
 
+#login-form {
+  margin: 20px auto;
+  text-align: center;
+}
+
+#content {
+  display: none;
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+}
 
 
