--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@ html *{
   font-size: 1em !important;
      color: #ff8c28 !important;
      font-family: Monaco !important;
+     text-align: center;
      font-weight: normal;
      text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000,-1px 2px 0 #000000, 1px 2px 0 #000000; 
   }
@@ -15,23 +16,39 @@ body {
   height: 100%;
 }
 
-#left{
-  margin: 65px 15px;
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+/* Create two equal columns that sits next to each other */
+.column {
+  background-image: url('/dist/images/AdobeStock_wide.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-attachment: scroll;
+  flex: 50%;
+  padding-top: 1%;
+  padding-left: 3%;
+  height: 800px; /* Should be removed. Only for demonstration */
+  margin: 5px;
+}
+
+/* #left{
+   
   background-image: url('/dist/images/AdobeStock_wide.png');
   background-repeat: no-repeat;
   background-size: contain;
   width: 47%;
   height: 505px;
   
-}
-#tripArea {
-  margin: 20px 10px;
-  padding: 32px 32px;
-}
+} */
 
-#totalsArea {
-  margin: 75px 250px; 
-}
+
+
 
 #total-spent{
   margin: 0px 0px;
@@ -39,10 +56,10 @@ body {
 
 #date-table {
   padding: 0px;
-  margin: 15px;
+  margin: 5%;
 }
 
-#trip-request {
+/* #trip-request {
   width: 40%;
   padding: 20px;
   margin-left: 20px;
@@ -51,12 +68,13 @@ body {
   background-size: contain;
   width: 26%;
   height: 500px;  
-}
+} */
 
 th{
   background-color: #58cff0;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 h2{
@@ -66,6 +84,7 @@ h2{
   width: 140px;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 h3{
@@ -75,6 +94,8 @@ h3{
   border-radius: 25%;
   border: groove;
   width: 187px;
+  align-items: center;
+  padding: 2%;
   
 }
 
@@ -83,6 +104,7 @@ h3{
   background-color: #58cff0;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 #id{
@@ -90,6 +112,7 @@ h3{
   background-color: #58cff0;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 #destination{
@@ -97,6 +120,7 @@ h3{
   background-color: #58cff0;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 
 }
 
@@ -105,6 +129,7 @@ h3{
   background-color: #58cff0;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 #travelers{
@@ -112,6 +137,7 @@ h3{
   background-color: #58cff0;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 
 }
 #submit{
@@ -122,28 +148,32 @@ h3{
   border: groove;
   height: 50px;
   width: 100px;
-
+  align-items: center;
 }
 
 #login-form {
   margin: 20px auto;
   text-align: center;
+  align-items: center;
 }
 
 #username{
   background-color: transparent;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 text{
   background-color: transparent;
+  align-items: center;
 }
 
 #password{
   background-color: transparent;
   border-radius: 25%;
   border: groove;
+  align-items: center;
 }
 
 #submit2{
@@ -152,6 +182,7 @@ text{
   border-radius: 25%;
   border: groove;
   margin: 12px;
+  align-items: center;
 }
 
 #text{
